Updated ReadME
Updated ReadMe to reflect change of IDE, and to note how to update javaFX.