@@ -1,7 +1,8 @@
 BagelPOSHandler
 A JavaFX-based point-of-sale (POS) desktop application simulating a bagel shop ordering system.
 
-Features
+Features:
+
 Customizable order options including bagels, coffee, and toppings with single-selection radio buttons.
 
 Dynamic price calculation with subtotal, tax, and total displayed in real time.
@@ -12,7 +13,8 @@ Interactive buttons to calculate totals and exit the application gracefully.
 
 Input validation and event-driven programming for smooth user experience.
 
-Components
+Components:
+
 BagelBox: Select bagel type and price.
 
 CoffeeBox: Choose coffee options with associated costs.
@@ -32,13 +34,18 @@ JavaFX
 
 Maven (optional for build management)
 
-How to Run
-Clone the repository:
-git clone https://github.com/GabeK23/Eclipse-Repository.git
+How to Run:
 
+Clone the repository:
+git clone https://github.com/GabeK23/Bagel-House-POS-Handler.git
+
+Make sure you have the JavaFX SDK downloaded and extracted on your C:\ drive (for example, C:\javafx-sdk-21).
+
+Update your launch.json file to point to the correct JavaFX SDK path. For example:
+
+"vmArgs": "--module-path C:/javafx-sdk-21/lib --add-modules javafx.controls,javafx.fxml"
 Open the project in your preferred Java IDE (Eclipse, VS Code, IntelliJ).
 
 Run the BagelGUI class as a JavaFX application.
 
 Interact with the UI to select bagels, coffee, toppings, and calculate order totals.
-
